test/src/e2e_vm_tests/test_programs/should_fail/self_impl_contract_invalid_const_no_initializer/src/main.sw
contract;

impl Contract {
    const CONST_NO_INITIALIZER: u64;
}
